Eintragung Flucht nach Vorn, GPA, KUPF, UNDOK

--- a/index.html
+++ b/index.html
@@ -117,11 +117,14 @@
 <li><a target="_blank" href="https://auge.or.at/">AUGE/UG</a></li>
 <li><a target="_blank" href="http://www.alterskompetenzen.info/">entschleunigung und orientierung - institut für alterskompetenzen</a></li>
 <li><a target="_blank" href="https://fian.at/">FIAN Österreich</a></li>
+<li><a target="_blank" href="http://www.fluchtnachvorn.org/">Flucht nach Vorn</a></li>
 <li><a target="_blank" href="http://www.radio-b138.at/index.php">Freies Radio B138</a></li>
 <li><a target="_blank" href="http://www.freirad.at/">Freies Radio Innsbruck FREIRAD</a></li>
+<li><a target="_blank" href="https://www.gpa-djp.at/cms/A03/A03_0/home">Gewerkschaft der Privatangestellten, Druck, Journalismus, Papier</a></li>
 <li><a target="_blank" href="http://www.proge.at">Gewerkschaft PRO-GE</a></li>
 <li><a target="_blank" href="http://www.ig-milch.at/">IG Milch</a></li>
 <li><a target="_blank" href="http://www.knackpunkt-salzburg.at">knack:punkt - Selbstbestimmt Leben Salzburg</a></li>
+<li><a target="_blank" href="https://kupf.at/">Kulturplattform Oberösterreich</a></li>
 <li><a target="_blank" href="http://mehr-demokratie.at/">mehr demokratie!</a></li>
 <li><a target="_blank" href="http://www.murxkraftwerk.at/">murXkraftwerk</a></li>
 <li><a target="_blank" href="http://www.netzwerksozialeverantwortung.at/">NeSoVe Netzwerk Soziale Verantwortung</a></li>
@@ -133,6 +136,7 @@
 <li><a target="_blank" href="http://systemchange-not-climatechange.at/">System Change, not Climate Change!</a></li>
 <li><a target="_blank" href="http://tdu-wien.at/">Theater der Unterdrückten Wien</a></li>
 <li><a target="_blank" href="http://transform.or.at/news/">transform!at</a></li>
+<li><a target="_blank" href="https://undok.at/">UNDOK – Verband zur gewerkschaftlichen Unterstützung undokumentiert Arbeitender</a></li>
 <li><a target="_blank" href="https://vgt.at/">Verein Gegen Tierfabriken</a></li>
 <li><a target="_blank" href="https://www.wwf.at/">WWF Österreich</a></li>
         </ul>
