--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
 <li><a target="_blank" href="http://www.ig-milch.at/">IG Milch</a></li>
 <li><a target="_blank" href="http://www.knackpunkt-salzburg.at">knack:punkt - Selbstbestimmt Leben Salzburg</a></li>
 <li><a target="_blank" href="https://kupf.at/">Kulturplattform Oberösterreich</a></li>
+<li><a target="_blank" href="http://www.lefoe.at/">LEFÖ - Beratung, Bildung und Begleitung für Migrantinnen</a></li>
 <li><a target="_blank" href="http://mehr-demokratie.at/">mehr demokratie!</a></li>
 <li><a target="_blank" href="http://www.murxkraftwerk.at/">murXkraftwerk</a></li>
 <li><a target="_blank" href="http://www.netzwerksozialeverantwortung.at/">NeSoVe Netzwerk Soziale Verantwortung</a></li>
