Eintragung Aktion 21, Aktive Arbeitslose, EVAL, KFB, MKÖ,

--- a/index.html
+++ b/index.html
@@ -114,8 +114,11 @@
         <ul>
 <li><a target="_blank" href="https://www.aufstehn.at/">#aufstehn – Verein zur Förderung zivilgesellschaftlicher Partizipation</a></li>
 <li><a target="_blank" href="http://agora.at/">AGORA – Verein Arbeitsgemeinschaft offenes Radio</a></li>
+<li><a target="_blank" href="http://www.aktion21.at/">Aktion 21 - pro Bürgerbeteiligung</a></li>
+<li><a target="_blank" href="http://www.aktive-arbeitslose.at/">Aktive Arbeitslose Österreich</a></li>
 <li><a target="_blank" href="https://auge.or.at/">AUGE/UG</a></li>
 <li><a target="_blank" href="http://www.alterskompetenzen.info/">entschleunigung und orientierung - institut für alterskompetenzen</a></li>
+<li><a target="_blank" href="http://evalww.com/">EVAL</a></li>
 <li><a target="_blank" href="https://fian.at/">FIAN Österreich</a></li>
 <li><a target="_blank" href="http://www.fluchtnachvorn.org/">Flucht nach Vorn</a></li>
 <li><a target="_blank" href="http://www.radio-b138.at/index.php">Freies Radio B138</a></li>
@@ -123,9 +126,11 @@
 <li><a target="_blank" href="https://www.gpa-djp.at/cms/A03/A03_0/home">Gewerkschaft der Privatangestellten, Druck, Journalismus, Papier</a></li>
 <li><a target="_blank" href="http://www.proge.at">Gewerkschaft PRO-GE</a></li>
 <li><a target="_blank" href="http://www.ig-milch.at/">IG Milch</a></li>
+<li><a target="_blank" href="http://www.kfb.at/">Katholische Frauenbewegung Österreichs</a></li>
 <li><a target="_blank" href="http://www.knackpunkt-salzburg.at">knack:punkt - Selbstbestimmt Leben Salzburg</a></li>
 <li><a target="_blank" href="https://kupf.at/">Kulturplattform Oberösterreich</a></li>
 <li><a target="_blank" href="http://www.lefoe.at/">LEFÖ - Beratung, Bildung und Begleitung für Migrantinnen</a></li>
+<li><a target="_blank" href="http://www.mkoe.at/">Mauthausen Komitee Österreich</a></li>
 <li><a target="_blank" href="http://mehr-demokratie.at/">mehr demokratie!</a></li>
 <li><a target="_blank" href="http://www.murxkraftwerk.at/">murXkraftwerk</a></li>
 <li><a target="_blank" href="http://www.netzwerksozialeverantwortung.at/">NeSoVe Netzwerk Soziale Verantwortung</a></li>
