Eintragung Kribibi, Asylkoordination, Freischreiber. Gedenkdienst, Plattform für Alleinerziehende

--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
 <li><a target="_blank" href="http://agora.at/">AGORA – Verein Arbeitsgemeinschaft offenes Radio</a></li>
 <li><a target="_blank" href="http://www.aktion21.at/">Aktion 21 - pro Bürgerbeteiligung</a></li>
 <li><a target="_blank" href="http://www.aktive-arbeitslose.at/">Aktive Arbeitslose Österreich</a></li>
+<li><a target="_blank" href="http://asyl.at/">Asylkoordination Österreich</a></li>
 <li><a target="_blank" href="https://auge.or.at/">AUGE/UG</a></li>
 <li><a target="_blank" href="http://www.alterskompetenzen.info/">entschleunigung und orientierung - institut für alterskompetenzen</a></li>
 <li><a target="_blank" href="http://evalww.com/">EVAL</a></li>
@@ -123,11 +124,13 @@
 <li><a target="_blank" href="http://www.fluchtnachvorn.org/">Flucht nach Vorn</a></li>
 <li><a target="_blank" href="http://www.radio-b138.at/index.php">Freies Radio B138</a></li>
 <li><a target="_blank" href="http://www.freirad.at/">Freies Radio Innsbruck FREIRAD</a></li>
+<li><a target="_blank" href="http://freischreiber.at/">Freischreiber Österreich</a></li>
 <li><a target="_blank" href="https://www.gpa-djp.at/cms/A03/A03_0/home">Gewerkschaft der Privatangestellten, Druck, Journalismus, Papier</a></li>
 <li><a target="_blank" href="http://www.proge.at">Gewerkschaft PRO-GE</a></li>
 <li><a target="_blank" href="http://www.ig-milch.at/">IG Milch</a></li>
 <li><a target="_blank" href="http://www.kfb.at/">Katholische Frauenbewegung Österreichs</a></li>
 <li><a target="_blank" href="http://www.knackpunkt-salzburg.at">knack:punkt - Selbstbestimmt Leben Salzburg</a></li>
+<li><a target="_blank" href="http://www.kribibi.at/">Verein kritischer Bibliothekarinnen und Bibliothekare</a></li>
 <li><a target="_blank" href="https://kupf.at/">Kulturplattform Oberösterreich</a></li>
 <li><a target="_blank" href="http://www.lefoe.at/">LEFÖ - Beratung, Bildung und Begleitung für Migrantinnen</a></li>
 <li><a target="_blank" href="http://www.mkoe.at/">Mauthausen Komitee Österreich</a></li>
@@ -135,6 +138,7 @@
 <li><a target="_blank" href="http://www.murxkraftwerk.at/">murXkraftwerk</a></li>
 <li><a target="_blank" href="http://www.netzwerksozialeverantwortung.at/">NeSoVe Netzwerk Soziale Verantwortung</a></li>
 <li><a target="_blank" href="http://1billionrising.at/">OBRA - One Billion Rising Austria</a></li>
+<li><a target="_blank" href="http://www.alleinerziehende.org/">Österreichische Plattform für Alleinerziehende</a></li>
 <li><a target="_blank" href="http://helsinki.at/">Radio Helsinki - Freies Radio Graz</a></li>
 <li><a target="_blank" href="http://o94.at/">Radio Orange 94.0</a></li>
 <li><a target="_blank" href="http://www.slioe.at/">Selbstbestimmt Leben Österreich (SLIÖ)</a></li>
@@ -143,6 +147,7 @@
 <li><a target="_blank" href="http://tdu-wien.at/">Theater der Unterdrückten Wien</a></li>
 <li><a target="_blank" href="http://transform.or.at/news/">transform!at</a></li>
 <li><a target="_blank" href="https://undok.at/">UNDOK – Verband zur gewerkschaftlichen Unterstützung undokumentiert Arbeitender</a></li>
+<li><a target="_blank" href="https://gedenkdienst.at/">Verein Gedenkdienst</a></li>
 <li><a target="_blank" href="https://vgt.at/">Verein Gegen Tierfabriken</a></li>
 <li><a target="_blank" href="https://www.wwf.at/">WWF Österreich</a></li>
         </ul>
